<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_TOR_MS" Id="{fc24f2dd-8446-4234-a094-9bc87d7f7d3c}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_TOR_MS EXTENDS FB_TOR_Base
//////////////////
//  Motion Sensor System
//////////////////

VAR_INPUT PERSISTENT
	// Parameters of the Object (instance/model specific) 
		ParamTempoDoorAlarm			: TIME := T#10S ;	(* (S) Tempo for Door sensor alarm *)
		ParamTempoUnlockAlarm		: TIME := T#1800S ;	(* (S) Tempo for Door sensor alarm *)
END_VAR

VAR_OUTPUT
	//Child objects
	
END_VAR

VAR_INPUT
	// I/O Inputs 		                                     				
			MesDataExd			: TOR_Standard ;  
	
END_VAR

VAR
	//M_ALARMMANAGEMENT VARIABLES//
	
		TON_Fermeture			: TON;				//(NA) Tempo to detect door opened for too long time . 
		PT_Unlock_Alarm			: TP;				//(NA) Timer to unlock alarm after 30 min
		

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="M_AlarmManagement" Id="{88a3f6da-8e19-44f1-8279-749c28a67586}">
      <Declaration><![CDATA[METHOD M_AlarmManagement
//////////////////
// Manages Door sensor alarms and warnings
/////////////////

VAR 
	// Method local variables (reinitialized at each cycle) 
	FB_AlarmCodeManager : FB_AlarmCodeManager ; 

END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Detection Variables

// The Motion Sensor must be activated for the duration of ParamTempoDoorAlarm for the alarm to be activated
TON_Fermeture(IN:= MesDataExd.MesData.MesAlarmState,PT:=ParamTempoDoorAlarm); //

// ALARM CODE //
	FB_AlarmCodeManager(
 		bAlarm1			:= FALSE,    							// 
		bAlarm2			:= FALSE, 								// 
		bAlarm3			:= FALSE, 								// 
		bAlarm4			:= FALSE, 								// 
		bAlarm5			:= FALSE,    							// 
		bAlarm6			:= FALSE, 								// 
		bAlarm7			:= FALSE, 								// 
		bAlarm8			:= FALSE, 								// 
		bAlarm9			:= FALSE,    							// 
		bAlarm10		:= FALSE, 								// 
		bAlarm11		:= FALSE, 								// 
		bAlarm12		:= FALSE, 								// 
		bAlarm13		:= FALSE,								// 
		bAlarm14		:= FALSE,								// 
		bAlarm15		:= FALSE,								// 
		wAlarmCode		=>MesDataExd.MesData.MesAlarmCode);

// WARNING CODE //
	FB_AlarmCodeManager(
		bAlarm1			:= FALSE,   							//
		bAlarm2			:= FALSE, 								// 
		bAlarm3			:= FALSE, 								// 
		bAlarm4			:= FALSE, 								// 
		bAlarm5			:= FALSE,    							// 
		bAlarm6			:= FALSE, 								// 
		bAlarm7			:= FALSE, 								// 
		bAlarm8			:= FALSE, 								// 
		bAlarm9			:= FALSE,    							// 
		bAlarm10		:= FALSE, 								// 
		bAlarm11		:= FALSE, 								// 
		bAlarm12		:= FALSE, 								// 
		bAlarm13		:= FALSE,     							//
		bAlarm14		:= FALSE,  								//
		bAlarm15		:= FALSE,  								//
		wAlarmCode		=>MesDataExd.MesData.MesWarningCode);

// EVENT CODE //
	FB_AlarmCodeManager(
		bAlarm1			:= TON_Fermeture.Q AND NOT PT_Unlock_Alarm.Q, 	// Intrusion Detected
		bAlarm2			:= FALSE, 										// 
		bAlarm3			:= FALSE, 										// 
		bAlarm4			:= FALSE, 										// 
		bAlarm5			:= FALSE,    									// 
		bAlarm6			:= FALSE, 										// 
		bAlarm7			:= FALSE, 										// 
		bAlarm8			:= FALSE, 										// 
		bAlarm9			:= FALSE,    									// 
		bAlarm10		:= FALSE, 										// 
		bAlarm11		:= FALSE, 										// 
		bAlarm12		:= FALSE, 										// 
		bAlarm13		:= FALSE,     									// 
		bAlarm14		:= FALSE,  										// 
		bAlarm15		:= FALSE,  										// 
		wAlarmCode		=>MesDataExd.MesData.MesEventCode);
		
// When the alarm is activated for the first time, it is disabled for the duration of ParamTempoUnlockAlarm to avoid spamming alarms

PT_Unlock_Alarm(IN := TON_Fermeture.Q, PT := ParamTempoUnlockAlarm);]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_Execute" Id="{00261c82-d7e7-4a63-8815-e22815b6b6f0}">
      <Declaration><![CDATA[METHOD M_Execute
//////////////////
//  Method Calls 
/////////////////

VAR 
	// Method local variables (reinitialized at each cycle) 
	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
SUPER^.M_Execute() ; 
]]></ST>
      </Implementation>
    </Method>
    <Method Name="M_StateManager" Id="{2a13441b-2f4a-471f-840f-f3d7c27fa4f1}">
      <Declaration><![CDATA[METHOD M_StateManager
//////////////////
// Detect when fire occurs
/////////////////

VAR 
	// Method local variables (reinitialized at each cycle)
 	MesStateInterm1 : BOOL;
	MesStateInterm2 : BOOL;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
IF ParamCableCutSecurity THEN
	MesStateInterm1 := NOT IN_MesState1_IO ; 
	MesStateInterm2 := NOT IN_MesState2_IO ; 
ELSE 
	MesStateInterm1 := IN_MesState1_IO;
	MesStateInterm2 := IN_MesState2_IO;
END_IF

IF ParamNbSensors = 1 THEN 
	MesStateInterm2 := MesStateInterm1 ;
END_IF

IF ParamAtleastOne THEN 
MesDataExd.MesData.MesAlarmState := MesStateInterm1 OR MesStateInterm2 ; 
ELSE
MesDataExd.MesData.MesAlarmState := MesStateInterm1 AND MesStateInterm2 ; 
END_IF

R_TRIGAlarm(CLK:= MesDataExd.MesData.MesAlarmState ) ; 
IF R_TRIGAlarm.Q THEN
	MesCountAlarm :=  MIN(MesCountAlarm + 1 ,4294967295 ) ; 
ELSIF IN_ResetCounter THEN 
	MesCountAlarm := 0 ; 
END_IF

MesDataExd.MesData.MesCountAlarm	:= MesCountAlarm ; 

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_TOR_MS">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_TOR_MS.M_AlarmManagement">
      <LineId Id="4" Count="0" />
      <LineId Id="152" Count="0" />
      <LineId Id="137" Count="1" />
      <LineId Id="8" Count="2" />
      <LineId Id="12" Count="0" />
      <LineId Id="88" Count="12" />
      <LineId Id="87" Count="0" />
      <LineId Id="13" Count="2" />
      <LineId Id="60" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="74" Count="12" />
      <LineId Id="73" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="33" Count="16" />
      <LineId Id="111" Count="1" />
      <LineId Id="153" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="154" Count="0" />
    </LineIds>
    <LineIds Name="FB_TOR_MS.M_Execute">
      <LineId Id="55" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="65" Count="0" />
    </LineIds>
    <LineIds Name="FB_TOR_MS.M_StateManager">
      <LineId Id="153" Count="0" />
      <LineId Id="110" Count="2" />
      <LineId Id="155" Count="0" />
      <LineId Id="157" Count="1" />
      <LineId Id="113" Count="10" />
      <LineId Id="135" Count="1" />
      <LineId Id="124" Count="0" />
      <LineId Id="137" Count="0" />
      <LineId Id="141" Count="1" />
      <LineId Id="138" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>